--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -1,19 +1,20 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 {% load static %}
 
-{% block title %}Your shopping cart{% endblock %}
+{% block title %}{% trans "Your shopping cart" %}{% endblock %}
 
 {% block content %}
-<h1>Your shopping cart</h1>
+<h1>{% trans "Your shopping cart" %}</h1>
 <table class="cart">
     <thead>
         <tr>
-            <th>Image</th>
-            <th>Product</th>
-            <th>Quantity</th>
-            <th>Remove</th>
-            <th>Unit price</th>
-            <th>Price</th>
+            <th>{% trans "Image" %}</th>
+            <th>{% trans "Product" %}</th>
+            <th>{% trans "Quantity" %}</th>
+            <th>{% trans "Remove" %}</th>
+            <th>{% trans "Unit price" %}</th>
+            <th>{% trans "Price" %}</th>
         </tr>
     </thead>
     <tbody>
@@ -47,14 +48,15 @@
         {% endfor %}
         {% if cart.coupon %}
         <tr class="subtotal">
-            <td>Subtotal</td>
+            <td>{% trans "Subtotal" %}</td>
             <td colspan="4"></td>
             <td class="num">${{ cart.get_total_price|floatformat:2 }}</td>
         </tr>
         <tr>
             <td>
-                "{{ cart.coupon.code }}" coupon
-                ({{ cart.coupon.discount }}% off)
+                {% blocktrans with code=cart.coupon.code discount=cart.coupon.discount %}
+                "{{ code }}" coupon ({{ discount }}% off)
+                {% endblocktrans %}
             </td>
             <td colspan="4"></td>
             <td class="num neg">
@@ -63,7 +65,7 @@
         </tr>
         {% endif %}
         <tr class="total">
-            <td>Total</td>
+            <td>{% trans "Total" %}</td>
             <td colspan="4"></td>
             <td class="num">${{ cart.get_total_price_after_discount|floatformat:2  }}</td>
         </tr>
@@ -71,7 +73,7 @@
 </table>
 {% if recommended_products %}
 <div class="recommendations cart">
-    <h3>People who bought these also bought</h3>
+    <h3>{% trans "People who bought these also bought" %}</h3>
     {% for p in recommended_products %}
     <div class="item">
         <a href="{{ p.get_absolute_url }}">
@@ -82,14 +84,14 @@
     {% endfor %}
 </div>
 {% endif %}
-<p>Apply a coupon:</p>
+<p>{% trans "Apply a coupon"%}:</p>
 <form action="{% url "coupons:apply" %}" method="post">
     {{ coupon_apply_form }}
     <input type="submit" value="Apply">
     {% csrf_token %}
 </form>
 <p class="text-right">
-    <a href="{% url "shop:product_list" %}" class="button light">Continue shopping</a>
-    <a href="{% url "orders:order_create" %}" class="button">Checkout</a>
+    <a href="{% url "shop:product_list" %}" class="button light">{% trans "Continue shopping" %}</a>
+    <a href="{% url "orders:order_create" %}" class="button">{% trans "Checkout" %}</a>
 </p>
 {% endblock %}
