--- a/myshop/orders/templates/orders/order/pdf.html
+++ b/myshop/orders/templates/orders/order/pdf.html
@@ -1,6 +1,7 @@
+{% load i18n %}
 <html>
     <body>
-        <h1>{% trans "My Shop" %}<h1>
+        <h1>{% trans "My Shop" %}</h1>
         <p>
             {% trans "Invoice no." %} {{ order.id }}<br>
             <span class="secondary">
